# bookish-fortnight

./: .gitignore  Cargo.toml  dockerfile  makefile  readme.md
common/: Cargo.toml
common/src/: lib.rs
index/: Cargo.toml  index.html  tailwind.config.js
index/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
