[package]
name = "index"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

futures = "0.3"
log = "0.4"
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19"
yew-agent = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlInputElement",
    "Location",
    "Window",
]
