[package]
authors = ["{{authors}}"]
description = ""

name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

clap = { version = "3", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
warp = "0.3"
